logs/zif.jsonserver.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zif'...
Listing './lib/python3.5/site-packages/zif/jsonserver'...
Listing './lib/python3.5/site-packages/zif/jsonserver/etc'...
Listing './lib/python3.5/site-packages/zif/jsonserver/jsolait'...
Listing './lib/python3.5/site-packages/zif/jsonserver/jsolait/doc'...
Compiling './lib/python3.5/site-packages/zif/jsonserver/jsolait/install_jsolait.py'...
***   File "./lib/python3.5/site-packages/zif/jsonserver/jsolait/install_jsolait.py", line 44
    print "retrieving %s" % fileurl
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zif/jsonserver/jsolait/lib'...
Listing './lib/python3.5/site-packages/zif/jsonserver/jsolait/src'...
Compiling './lib/python3.5/site-packages/zif/jsonserver/jsonrpc.py'...
***   File "./lib/python3.5/site-packages/zif/jsonserver/jsonrpc.py", line 166
    raise TypeError, 'Unsupported type for JSON-RPC "params" (%s)' \
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zif/jsonserver/minjson.py'...
***   File "./lib/python3.5/site-packages/zif/jsonserver/minjson.py", line 197
    def readTokens(self,type, token, (srow, scol), (erow, ecol), line):
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zif/jsonserver/tests'...
Compiling './lib/python3.5/site-packages/zif/jsonserver/tests/test_json.py'...
***   File "./lib/python3.5/site-packages/zif/jsonserver/tests/test_json.py", line 50
    s = 1L
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zif/jsonserver/tests/test_jsonrpcrequest.py'...
***   File "./lib/python3.5/site-packages/zif/jsonserver/tests/test_jsonrpcrequest.py", line 102
    return "%s, %s" % (`a`, `b`)
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zif.jsonserver-0.6.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
